# libjk

./: .editorconfig  README.md  meson.build  meson_options.txt
include/: meson.build  sll.h
include/jk/: sll.h
src/: meson.build  sll.c
src/sll/: append.c  clear.c  del.c  free.c  get.c  init.c  insert.c  n.c  prepend.c  size.c
tests/: meson.build  test.h  test_sll.c  wrap_calloc.c  wrap_calloc.h  wrap_free.c  wrap_free.h  wrap_malloc.c  wrap_malloc.h  wrap_realloc.c  wrap_realloc.h
tests/sll/: init.c
