# SPDX-License-Identifier: GPL-3.0-or-later
#
# Copyright (C) 2021--2023  Jacob Koziej <jacobkoziej@gmail.com>

project(
        'libjk',
        'c',
        version : '0.0.0',
        license : 'GPL-3.0-or-later',
        default_options : [
                'c_std=c17',
                'warning_level=3',
        ],
        meson_version : '>=1.0.0',
)

subdir('include')
